create serverfacade